[gd_scene load_steps=7 format=3 uid="uid://m687fwwg288h"]

[ext_resource type="Script" uid="uid://db0fl44jb2ep7" path="res://scenes/menus/main/main.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://opj77j7k0eiy" path="res://models/floor.gd" id="2_jyhfs"]
[ext_resource type="Material" uid="uid://p8h7kpk70bg3" path="res://resources/materials/sheet_metal.tres" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://ca38c7oafrli" path="res://scenes/player/player.tscn" id="4_tefeu"]
[ext_resource type="PackedScene" uid="uid://ck43pilejktc4" path="res://scenes/menus/settings/settings_menu.tscn" id="6_tefeu"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_tbgi4"]
plane = Plane(0, 0, 1, 0)

[node name="Main" type="Node3D"]
script = ExtResource("1_0wfyh")
player_scene = ExtResource("4_tefeu")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, 0, 0, 0)
light_energy = 0.2
light_angular_distance = 10.0
shadow_enabled = true
shadow_opacity = 0.7
directional_shadow_mode = 0
directional_shadow_blend_splits = true

[node name="Floor" type="Node3D" parent="Environment"]
script = ExtResource("2_jyhfs")
box_dimensions = Vector3(100, 0.1, 100)
material = ExtResource("3_tbgi4")
metadata/_custom_type_script = ExtResource("2_jyhfs")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.353554, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612373, 0.612372, 3, 2.342, 3)
doppler_tracking = 2
current = true
fov = 77.3196
far = 50.0

[node name="Boundaries" type="StaticBody3D" parent="."]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -3.4, 0, -8.5)
metadata/cushion = 10000.0

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Boundaries"]
shape = SubResource("WorldBoundaryShape3D_tbgi4")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 10.3923, 0, 6)
shape = SubResource("WorldBoundaryShape3D_tbgi4")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(-0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, -0.642788, -10.2729, 0, 6.19327)
shape = SubResource("WorldBoundaryShape3D_tbgi4")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 6.72532, 0, 13.3514)
shape = SubResource("WorldBoundaryShape3D_tbgi4")

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ButtonVBox" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.54
anchor_bottom = 0.54
offset_left = 29.0
offset_top = -89.9
offset_right = 130.0
offset_bottom = 90.1
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Start" type="Button" parent="Menu/ButtonVBox"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="Menu/ButtonVBox"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Menu/ButtonVBox"]
layout_mode = 2
text = "Quit"

[node name="Title" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.267
offset_bottom = -0.12001
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Dazed & Defused"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SettingsMenu" parent="." instance=ExtResource("6_tefeu")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="Menu/ButtonVBox/Start" to="." method="_start"]
[connection signal="pressed" from="Menu/ButtonVBox/Settings" to="." method="_settings_pressed"]
[connection signal="pressed" from="Menu/ButtonVBox/Quit" to="." method="_on_quit_pressed"]
[connection signal="request_close" from="SettingsMenu" to="." method="_request_close"]
